--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,1 +1,41 @@
-<h1><%= @flat.name %></h1>
+<div class="row mt-4">
+  <div class="col-12 col-lg-7 bg-white mx-4 p-3">
+    <h1><%= @flat.name %></h1>
+    <p><%= @flat.address %></p>
+    <hr>
+    <h3>A bit more about this flat...</h3>
+    <p><%= @flat.description %></p>
+  </div>
+
+  <div class="col-12 col-lg-3 bg-white p-3">
+    <h4>Book this place!</h4>
+    <div class="input-group mb-3">
+      <span class="input-group-text" id="basic-addon1">From:</span>
+      <input type="text" class="form-control" placeholder="12/01/2021" aria-label="from" aria-describedby="basic-addon1">
+    </div>
+    <div class="input-group mb-3">
+      <span class="input-group-text" id="basic-addon1">To:</span>
+      <input type="text" class="form-control" placeholder="18/01/2021" aria-label="to" aria-describedby="basic-addon1">
+    </div>
+    <button class="btn btn-success w-100">Book</button>
+    <hr>
+    <div>
+      <h3>Details</h3>
+      <div class="d-flex justify-content-around">
+        <p><i class="fa fa-user p-2" aria-hidden="true"></i><%= @flat.number_of_guests %></p>
+        <p><i class="fas fa-euro-sign p-2"></i></i><%= @flat.price_per_night %></p>
+      </div>
+    </div>
+    <hr>
+    <div class="d-flex justify-content-between">
+      <h5>Share</h5>
+      <div class="d-flex">
+        <i class="fab fa-facebook-square fa-2x mr-2"></i>
+        <i class="fab fa-twitter-square fa-2x mr-2"></i>
+        <i class="fab fa-pinterest-square fa-2x mr-2"></i>
+        <i class="fa fa-envelope-square fa-2x mr-2"></i>
+      </div>
+    </div>
+  </div>
+</div>
+
