--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand">Simple Airbnb</a>
+      <%= link_to 'Simple Airbnb', flats_path, class: 'navbar-brand' %>
       <div class="ml-auto d-flex justify-content-between">
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
