picture_url added

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,10 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
+.map {
+  height: 350px;
+  background-position: center;
+  background-size: cover;
+}
