--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -5,6 +5,7 @@
     <%= f.input :description %>
     <%= f.input :number_of_guests %>
     <%= f.input :price_per_night %>
+    <%= f.input :picture_url %>
     <%= f.button :submit, class: 'btn btn-primary mb-5' %>
   <% end %>
 </div>
