--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -5,6 +5,7 @@
   <div class="col-12 col-md-6 col-lg-4 my-3">
     <div class="card" style="width: 18rem;">
       <div class="card-body">
+      <img src="<%= flat.picture_url %>" class="card-img-top" alt="picture" style="width: 250px; height: 200px">
         <h5 class="card-title"><%= flat.name %></h5>
         <h6 class="card-subtitle mb-2 text-muted"><%= flat.address %></h6>
         <div class="d-flex justify-content-around">
