--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,3 +1,5 @@
+<div class="map" style="background-image: url('<%= @flat.picture_url %>')"></div>
+
 <div class="row mt-4">
   <div class="col-12 col-lg-7 bg-white mx-4 p-3">
     <h1><%= @flat.name %></h1>
